# Pracownia-z-numerk-w

./: .gitignore
Dokumentacja/: bibliografia.aux  main.out  main.tex  opisy_alg.aux  opisy_alg.tex  testy_tabele_wykresy.aux  testy_tabele_wykresy.tex  wnioski.aux  wstep.aux  wstep.tex  zlozonosc_poprawnosc.aux
zadanie1/: Makefile  README  \  assoc_test.cpp  benchmark.cpp  benchmark.h  delta_test.cpp  in.m  inverse_test.cpp  matrix.h  matrix_test.cpp  memory_test.cpp  test_inverses.cpp  threshold_plot.gnu  time_test.cpp  time_test_all.cpp  time_test_best.cpp
zadanie1/Dokumentacja/: bibliografia.aux  biblografia.tex  main.aux  main.out  main.tex  main.tex~  main.toc  opisy_alg.tex  sprawozdanie.tex  testy_tabele_wykresy.tex  testy_tabele_wykresy.tex~  wnioski.tex  wstep.tex
zadanie1/Dokumentacja/wykresy/: assoc_double.tex  inverse_X-1_X.tex  inverse_X-1_X_float.tex  inverse_X_X-1.tex  inverse_X_X-1_float.tex  make_assoc_float.gnu  make_inverse_X-1_X.gnu  make_inverse_X-1_X_float.gnu  make_inverse_X_X-1.gnu  make_inverse_X_X-1_float.gnu  make_time_nat_mut.gnu  time_nat_mut.tex  time_nat_str.tex
zadanie1/doc/: Makefile  bibliografia.tex  main.out  main.toc  octave-core  opisy_alg.tex  testy_tabele_wykresy.tex  wnioski.tex  wstep.tex
zadanie1/doc/wykresy/: assoc_float.tex  make_assoc_double.gnu  make_time_nat_str.gnu
zadanie1/inverses/: inverse_generator.m
zadanie1/prog/: README  assoc_test.cpp  inverse_test.cpp  matrix.h  threshold_test.cpp  time_plot.gnu  time_test_all.cpp  time_test_best.cpp
zadanie2/: .gitignore
zadanie2/Dokumentacja/: bibliografia.tex  main.tex  main.tex~  main.toc  opis_metod.tex  profesjonalny.tex  testy_jakosci.tex  testy_kolejnosci.tex  testy_szybkosci.tex  wnioski.tex  wstep.tex
zadanie2/Dokumentacja/Wykresy/: time_plot.tex
zadanie2/doc/: Makefile  main.toc  profesjonalny.tex  testy_do_zrobienia.tex  testy_jakosci.tex  testy_kolejnosci.tex  testy_szybkosci.tex  wnioski.tex  wstep.tex
zadanie2/materialy/: linki
zadanie2/prog/: Makefile  README  bitmap.cpp  bitmap.h  bitmap_channel.cpp  bitmap_channel.h  bitmap_format.h  bitmap_image.cpp  bitmap_image.h  bitmap_image_procedural.cpp  bitmap_image_procedural.h  bitmap_image_sin.cpp  bitmap_image_sin.h  bitmap_load_test.cpp  bitmap_sin_test.cpp  data_loss_test.cpp  procedural_bitmap_test.cpp  procedural_resize_test.cpp  resizer.h  resizers.h  resizers_base.cpp  resizers_base.h  resizers_closest.cpp  resizers_closest.h  resizers_combined.cpp  resizers_combined.h  resizers_cubic.cpp  resizers_cubic.h  resizers_linear.cpp  resizers_linear.h  resizers_test.cpp  resizers_utils.cpp  resizers_utils.h  time_test.cpp  visual_order_test.cpp
zadanie2/python_demo/: cubic.py
zadanie3/: Makefile
zadanie3/doc/: Makefile  biblio.tex  dokladnosc.tex  main.tex  main.tex.backup  main.tex~  main.toc  opis_metod.tex  opis_metod.tex~  podsumowanie.tex  wstep.tex  zlozonosc.tex  znajd_mac_odwr.tex  znajd_mac_odwr.tex~
zadanie3/prog/: CMakeLists.txt  README  matrix.cpp  matrix.h  matrix_arithmetic.cpp  matrix_inversions.cpp  matrix_lu.cpp  matrix_norm.cpp  matrix_qr.cpp  matrix_triangular.cpp  matrix_upper_triangular.cpp  matrix_utils.cpp  program.cpp  python_bindings.cpp
zadanie3/prog/matlib/: CMakeLists.txt  matlib  matlib.h  matrix.cpp  matrix.h
zadanie3/prog/tests/: .gitignore  Makefile  accuracy.py  time.py
zadanie3/prog/unittests/: .gitignore  arithmetic_test.py  invert_test.py  library_test.py  lu_test.py  misc_test.py  norms_test.py  qr_test.py  triangular_test.py
zadanie3/python_binding_experiment/: CMakeLists.txt  test.cpp
(+3 files in other folders)
